deps/CppInterOpExtra/include/clang-c/CXCppInterOp.h

LLVM_CLANG_C_EXTERN_C_BEGIN

typedef void *CXCppInterpreter;
typedef void *CXCppScope;
typedef void *CXCppType;
typedef void *CXCppFunction;
typedef void *CXCppConstFunction;
typedef void *CXCppObject;
typedef void *CXCppJitCall;
bool clang_CppInterOp_IsPODType(CXCppType type);
CXCppType clang_CppInterOp_GetUnderlyingType(CXCppType type);
CXString clang_CppInterOp_GetTypeAsString(CXCppType type);
CXCppType clang_CppInterOp_GetCanonicalType(CXCppType type);
CXCppType clang_CppInterOp_GetType(const char *type);
CXCppType clang_CppInterOp_GetComplexType(CXCppType element_type);
CXCppType clang_CppInterOp_GetTypeFromScope(CXCppScope scope);
bool clang_CppInterOp_IsTypeDerivedFrom(CXCppType derived, CXCppType base);
CXCppJitCall clang_CppInterOp_MakeFunctionCallable(CXCppConstFunction func);
void clang_CppInterOp_CXCppJitCall_dispose(CXCppJitCall call);
bool clang_CppInterOp_IsConstMethod(CXCppFunction method);
CXString clang_CppInterOp_GetFunctionArgDefault(CXCppFunction func, size_t param_index);
CXString clang_CppInterOp_GetFunctionArgName(CXCppFunction func, size_t param_index);
CXCppInterpreter clang_CppInterOp_CreateInterpreter(const char **args, size_t num_args,
                                                    const char **gpu_args,
                                                    size_t num_gpu_args);
CXCppInterpreter clang_CppInterOp_GetInterpreter(void);
void clang_CppInterOp_AddSearchPath(const char *dir, bool isUser, bool prepend);
const char *clang_CppInterOp_GetResourceDir(void);
void clang_CppInterOp_AddIncludePath(const char *dir);
int clang_CppInterOp_Declare(const char *code, bool silent);
int clang_CppInterOp_Process(const char *code);
intptr_t clang_CppInterOp_Evaluate(const char *code, bool *HadError);
CXString clang_CppInterOp_LookupLibrary(const char *lib_name);
bool clang_CppInterOp_LoadLibrary(const char *lib_stem, bool lookup);
void clang_CppInterOp_UnloadLibrary(const char *lib_stem);
CXString clang_CppInterOp_SearchLibrariesForSymbol(const char *mangled_name,
                                                   bool search_system);
bool clang_CppInterOp_InsertOrReplaceJitSymbol(const char *linker_mangled_name,
                                               uint64_t address);
CXString clang_CppInterOp_ObjToString(const char *type, void *obj);
typedef struct {
  CXCppType m_Type;
  char *m_IntegralValue;
} CXTemplateArgInfo;
typedef struct {
  CXTemplateArgInfo *Args;
  size_t Count;
} CXTemplateArgInfoSet;
void clang_CppInterOp_CXTemplateArgInfoSet_dispose(CXTemplateArgInfoSet args);
CXTemplateArgInfoSet
clang_CppInterOp_GetClassTemplateInstantiationArgs(CXCppScope templ_instance);
CXCppFunction
clang_CppInterOp_InstantiateTemplateFunctionFromString(const char *function_template);
CXStringSet *clang_CppInterOp_GetAllCppNames(CXCppScope scope);
void clang_CppInterOp_DumpScope(CXCppScope scope);
typedef struct {
  size_t *Dims;
  size_t Count;
} CXCppDimensions;
void clang_CppInterOp_CXCppDimensions_dispose(CXCppDimensions dims);
CXCppDimensions clang_CppInterOp_GetDimensions(CXCppType type);
CXCppObject clang_CppInterOp_Allocate(CXCppScope scope);
void clang_CppInterOp_Deallocate(CXCppScope scope, CXCppObject address);
CXCppObject clang_CppInterOp_Construct(CXCppScope scope, void *arena);
void clang_CppInterOp_Destruct(CXCppObject This, CXCppScope type, bool withFree);
typedef enum CXCppCaptureStreamKind {
  CXCppkStdOut = 1, ///< stdout
  CXCppkStdErr,     ///< stderr
  // CXCppkStdBoth,    ///< stdout and stderr
  // CXCppkSTDSTRM  // "&1" or "&2" is not a filename
} CXCppCaptureStreamKind;
void clang_CppInterOp_BeginStdStreamCapture(CXCppCaptureStreamKind fd_kind);
CXString clang_CppInterOp_EndStdStreamCapture(void);