lib/17/LibCppInterOp.jl


function clang_CppInterOp_IsPODType(type)
    @ccall libcppinterop.clang_CppInterOp_IsPODType(type::CXCppType)::Bool
end

function clang_CppInterOp_GetUnderlyingType(type)
    @ccall libcppinterop.clang_CppInterOp_GetUnderlyingType(type::CXCppType)::CXCppType
end

function clang_CppInterOp_GetTypeAsString(type)
    @ccall libcppinterop.clang_CppInterOp_GetTypeAsString(type::CXCppType)::CXString
end

function clang_CppInterOp_GetCanonicalType(type)
    @ccall libcppinterop.clang_CppInterOp_GetCanonicalType(type::CXCppType)::CXCppType
end

function clang_CppInterOp_GetType(type)
    @ccall libcppinterop.clang_CppInterOp_GetType(type::Ptr{Cchar})::CXCppType
end

function clang_CppInterOp_GetComplexType(element_type)
    @ccall libcppinterop.clang_CppInterOp_GetComplexType(element_type::CXCppType)::CXCppType
end

function clang_CppInterOp_GetTypeFromScope(scope)
    @ccall libcppinterop.clang_CppInterOp_GetTypeFromScope(scope::CXCppScope)::CXCppType
end

function clang_CppInterOp_IsTypeDerivedFrom(derived, base)
    @ccall libcppinterop.clang_CppInterOp_IsTypeDerivedFrom(
        derived::CXCppType,
        base::CXCppType,
    )::Bool
end

function clang_CppInterOp_MakeFunctionCallable(func)
    @ccall libcppinterop.clang_CppInterOp_MakeFunctionCallable(
        func::CXCppConstFunction,
    )::CXCppJitCall
end

function clang_CppInterOp_CXCppJitCall_dispose(call)
    @ccall libcppinterop.clang_CppInterOp_CXCppJitCall_dispose(call::CXCppJitCall)::Cvoid
end

function clang_CppInterOp_IsConstMethod(method)
    @ccall libcppinterop.clang_CppInterOp_IsConstMethod(method::CXCppFunction)::Bool
end

function clang_CppInterOp_GetFunctionArgDefault(func, param_index)
    @ccall libcppinterop.clang_CppInterOp_GetFunctionArgDefault(
        func::CXCppFunction,
        param_index::Csize_t,
    )::CXString
end

function clang_CppInterOp_GetFunctionArgName(func, param_index)
    @ccall libcppinterop.clang_CppInterOp_GetFunctionArgName(
        func::CXCppFunction,
        param_index::Csize_t,
    )::CXString
end

function clang_CppInterOp_CreateInterpreter(args, num_args, gpu_args, num_gpu_args)
    @ccall libcppinterop.clang_CppInterOp_CreateInterpreter(
        args::Ptr{Ptr{Cchar}},
        num_args::Csize_t,
        gpu_args::Ptr{Ptr{Cchar}},
        num_gpu_args::Csize_t,
    )::CXCppInterpreter
end

function clang_CppInterOp_GetInterpreter()
    @ccall libcppinterop.clang_CppInterOp_GetInterpreter()::CXCppInterpreter
end

function clang_CppInterOp_AddSearchPath(dir, isUser, prepend)
    @ccall libcppinterop.clang_CppInterOp_AddSearchPath(
        dir::Ptr{Cchar},
        isUser::Bool,
        prepend::Bool,
    )::Cvoid
end

function clang_CppInterOp_GetResourceDir()
    @ccall libcppinterop.clang_CppInterOp_GetResourceDir()::Ptr{Cchar}
end

function clang_CppInterOp_AddIncludePath(dir)
    @ccall libcppinterop.clang_CppInterOp_AddIncludePath(dir::Ptr{Cchar})::Cvoid
end

function clang_CppInterOp_Declare(code, silent)
    @ccall libcppinterop.clang_CppInterOp_Declare(code::Ptr{Cchar}, silent::Bool)::Cint
end

function clang_CppInterOp_Process(code)
    @ccall libcppinterop.clang_CppInterOp_Process(code::Ptr{Cchar})::Cint
end

function clang_CppInterOp_Evaluate(code, HadError)
    @ccall libcppinterop.clang_CppInterOp_Evaluate(
        code::Ptr{Cchar},
        HadError::Ptr{Bool},
    )::intptr_t
end

function clang_CppInterOp_LookupLibrary(lib_name)
    @ccall libcppinterop.clang_CppInterOp_LookupLibrary(lib_name::Ptr{Cchar})::CXString
end

function clang_CppInterOp_LoadLibrary(lib_stem, lookup)
    @ccall libcppinterop.clang_CppInterOp_LoadLibrary(
        lib_stem::Ptr{Cchar},
        lookup::Bool,
    )::Bool
end

function clang_CppInterOp_UnloadLibrary(lib_stem)
    @ccall libcppinterop.clang_CppInterOp_UnloadLibrary(lib_stem::Ptr{Cchar})::Cvoid
end

function clang_CppInterOp_SearchLibrariesForSymbol(mangled_name, search_system)
    @ccall libcppinterop.clang_CppInterOp_SearchLibrariesForSymbol(
        mangled_name::Ptr{Cchar},
        search_system::Bool,
    )::CXString
end

function clang_CppInterOp_InsertOrReplaceJitSymbol(linker_mangled_name, address)
    @ccall libcppinterop.clang_CppInterOp_InsertOrReplaceJitSymbol(
        linker_mangled_name::Ptr{Cchar},
        address::UInt64,
    )::Bool
end

function clang_CppInterOp_ObjToString(type, obj)
    @ccall libcppinterop.clang_CppInterOp_ObjToString(
        type::Ptr{Cchar},
        obj::Ptr{Cvoid},
    )::CXString
end

struct CXTemplateArgInfo
    m_Type::CXCppType
    m_IntegralValue::Ptr{Cchar}
end

function clang_CppInterOp_InstantiateClassTemplate(tmpl, template_args, template_args_size)
    @ccall libcppinterop.clang_CppInterOp_InstantiateClassTemplate(
        tmpl::CXCppScope,
        template_args::Ptr{CXTemplateArgInfo},
        template_args_size::Csize_t,
    )::CXCppScope
end

struct CXTemplateArgInfoSet
    Args::Ptr{CXTemplateArgInfo}
    Count::Csize_t
end

function clang_CppInterOp_CXTemplateArgInfoSet_dispose(args)
    @ccall libcppinterop.clang_CppInterOp_CXTemplateArgInfoSet_dispose(
        args::CXTemplateArgInfoSet,
    )::Cvoid
end

function clang_CppInterOp_GetClassTemplateInstantiationArgs(templ_instance)
    @ccall libcppinterop.clang_CppInterOp_GetClassTemplateInstantiationArgs(
        templ_instance::CXCppScope,
    )::CXTemplateArgInfoSet
end

function clang_CppInterOp_InstantiateTemplateFunctionFromString(function_template)
    @ccall libcppinterop.clang_CppInterOp_InstantiateTemplateFunctionFromString(
        function_template::Ptr{Cchar},
    )::CXCppFunction
end

function clang_CppInterOp_GetAllCppNames(scope)
    @ccall libcppinterop.clang_CppInterOp_GetAllCppNames(
        scope::CXCppScope,
    )::Ptr{CXStringSet}
end

function clang_CppInterOp_DumpScope(scope)
    @ccall libcppinterop.clang_CppInterOp_DumpScope(scope::CXCppScope)::Cvoid
end

struct CXCppDimensions
    Dims::Ptr{Csize_t}
    Count::Csize_t
end

function clang_CppInterOp_CXCppDimensions_dispose(dims)
    @ccall libcppinterop.clang_CppInterOp_CXCppDimensions_dispose(
        dims::CXCppDimensions,
    )::Cvoid
end

function clang_CppInterOp_GetDimensions(type)
    @ccall libcppinterop.clang_CppInterOp_GetDimensions(type::CXCppType)::CXCppDimensions
end

function clang_CppInterOp_Allocate(scope)
    @ccall libcppinterop.clang_CppInterOp_Allocate(scope::CXCppScope)::CXCppObject
end

function clang_CppInterOp_Deallocate(scope, address)
    @ccall libcppinterop.clang_CppInterOp_Deallocate(
        scope::CXCppScope,
        address::CXCppObject,
    )::Cvoid
end

function clang_CppInterOp_Construct(scope, arena)
    @ccall libcppinterop.clang_CppInterOp_Construct(
        scope::CXCppScope,
        arena::Ptr{Cvoid},
    )::CXCppObject
end

function clang_CppInterOp_Destruct(This, type, withFree)
    @ccall libcppinterop.clang_CppInterOp_Destruct(
        This::CXCppObject,
        type::CXCppScope,
        withFree::Bool,
    )::Cvoid
end

@enum CXCppCaptureStreamKind::UInt32 begin
    CXCppkStdOut = 1
    CXCppkStdErr = 2
end

function clang_CppInterOp_BeginStdStreamCapture(fd_kind)
    @ccall libcppinterop.clang_CppInterOp_BeginStdStreamCapture(
        fd_kind::CXCppCaptureStreamKind,
    )::Cvoid
end

function clang_CppInterOp_EndStdStreamCapture()
    @ccall libcppinterop.clang_CppInterOp_EndStdStreamCapture()::CXString
end

# exports
const PREFIXES = ["clang", "CX"]
for name in names(@__MODULE__; all = true), prefix in PREFIXES
    if startswith(string(name), prefix)
        @eval export $name
    end
end

end # module
